<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/settings">

        <ListPreference
                android:key="main_text_size"
                android:title="@string/main_text_size"
                android:summary="@string/summary_main_text_size" 
                android:entries="@array/main_text_entries"
                android:entryValues="@array/main_text_entryValues"
                android:defaultValue="20"/>
        
        <ListPreference
                android:key="favorite_text_size"
                android:title="@string/favorite_text_size"
                android:summary="@string/summary_favorite_text_size" 
                android:entries="@array/main_text_entries"
                android:entryValues="@array/main_text_entryValues"
                android:defaultValue="18"/>

    </PreferenceCategory>
    
    <PreferenceCategory
        android:title="Backup">
        
        <Preference
            android:title="Export favorites"
            android:summary="Backup your favorites to a text file"
            android:key="export">
        </Preference>
        
        <Preference
            android:title="Import favorites"
            android:summary="Load favorites from a text file"
            android:key="import">
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/about">
        
        <Preference
			 android:title="@string/rate_this_app"
			 android:summary="@string/rate_this_app_summary"
			 android:key="homepage">
			 
			 <intent
			 android:action="android.intent.action.VIEW"
			 android:data="market://details?id=com.bretblack.wesay"
			 />
		 </Preference>
        
         <Preference
			 android:title="@string/visit_my_website"
			 android:summary="@string/visit_my_website_summary"
			 android:key="homepage">
			 
			 <intent
			 android:action="android.intent.action.VIEW"
			 android:data="http://www.bretblack.com"
			 />
		 </Preference>
    </PreferenceCategory>
</PreferenceScreen>